[add] endpoint for create training for current swimmer
